# EncodingConverter

./: .clang-format  .gitignore  CMakeLists.txt  README.md
EncodingConverter/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  app.manifest  main.cpp
EncodingConverterMfc/: CMakeLists.txt  CustomRichEdit.cpp  CustomRichEdit.h  Dialog.rc  MainDialog.cpp  MainDialog.h  app.manifest  main.cpp  resource.h  stdafx.h
EncodingConverterWin32/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  app.manifest  build.bat  main.cpp  resource.h  resources.rc
EncodingConverterWin34/: CMakeLists.txt  Dialog.rc  EncodingDialog.cpp  EncodingDialog.h  app.manifest  main_new.cpp  resource.h  resources.rc
EncodingConverterWin34/windlg/: CMakeLists.txt  Com.h  Dialog.h  ImgList.cpp  str.h
EncodingConverterWin35/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  app.manifest  main.cpp  resource.h  resources.rc
EncodingConverterWin35/vaca/: CMakeLists.txt
EncodingConverterWin35/vaca/vaca/: Application.cpp  Cursor.cpp  base.h  win32.h
EncodingConverterWin35/vaca/vaca/win32/: BrushImpl.h  WidgetsMovementImpl.h
cli/: CMakeLists.txt  main.cpp
common/: FileConverter.hpp  StringUtils.hpp
